--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,28 +1,6 @@
 <section class="splash">
+  <div class="transparent-box"></div>
   <div class="background-overlay"></div>
-  <!-- <div class="no-gap">
-    <div class="column-el">
-      <div class="populated">
-        <div class="heading" data-aos="fade-up" data-aos-duration="3000">
-          <div class="widget-container">
-            <h1 class="heading-title">Violeta & Carlos</h1>
-          </div>
-        </div>
-        <div
-          class="widget widget-heading"
-          data-aos="fade-up"
-          data-aos-duration="3000"
-        >
-          <h3 class="heading-title size-default">- SAVE THE DATE -</h3>
-        </div>
-        <div data-aos="fade-up" data-aos-duration="3000">
-          <h3 class="heading-title size-default">
-            Sábado, 23 de Septiembre 2023.
-          </h3>
-        </div>
-      </div>
-    </div>
-  </div> -->
   <div class="no-gap">
     <div class="container">
       <div class="row">
@@ -33,13 +11,14 @@
               <div class="col" data-aos="fade-up" data-aos-duration="1000" >
                 <h1 class="title-name">Violeta & Carlos</h1>
               </div>
-              <div class="col" data-aos="fade-up" data-aos-duration="2000"  data-aos-delay="300">
+              <!-- <div class="col" data-aos="fade-up" data-aos-duration="2000"  data-aos-delay="300">
                 <h3 class="title-save size-default">- SAVE THE DATE -</h3>
-              </div>
+              </div> -->
               <div class="col" data-aos="fade-up" data-aos-duration="3000"  data-aos-delay="600">
-                <h3 class="title-date size-default">
-                  Sábado, 23 de Septiembre 2023.
-                </h3>
+                <h2 class="title-date ">
+                  Sábado 23 de Septiembre 2023
+                </h2 >
+                <h4 class="title-place" >Monterrey N.L.</h4>
               </div>
             </div>
           </div>
