--- a/src/app/timeline/timeline.component.scss
+++ b/src/app/timeline/timeline.component.scss
@@ -3229,7 +3229,7 @@ mark {
 }
 .timeline-item-title {
   padding-bottom: 20px;
-  font-family: Cinzel;
+  font-family: CinzelDecorative;
 }
 .timeline-item-content {
   padding-top: 10px;
