--- a/src/app/ceremonia/ceremonia.component.html
+++ b/src/app/ceremonia/ceremonia.component.html
@@ -10,8 +10,7 @@
     </div>
   </div>
   <div class="section-header">
-    <h3>Código de vestimenta</h3>
-    <p>Etiqueta</p>
+    <h2>Etiqueta</h2>
   </div>
   <div class="row">
     <div class="vestimenta-content" *ngIf="!isMobile">
@@ -21,18 +20,18 @@
         </div>
         <div class="column">
           <img
-            data-aos="zoom-in"
+            data-aos="fade-right"
             data-aos-duration="3000"
-            class="vestimenta-icon"
-            src="../../assets/images/codigo-hombre.png"
+            class="vestimenta-icon vestimenta-traje"
+            src="../../assets/images/traje.png"
           />
         </div>
         <div class="column">
           <img
-            data-aos="zoom-in"
+            data-aos="fade-left"
             data-aos-duration="3000"
-            class="vestimenta-icon"
-            src="../../assets/images/codigo-mujer.png"
+            class="vestimenta-icon vestimenta-vestido"
+            src="../../assets/images/vestido.png"
           />
         </div>
         <div class="column vestido">
@@ -42,7 +41,7 @@
       <div class="row nota">
         <div class="column nota-importante">
           <h3>SÓLO ADULTOS</h3>
-          <hr />
+          <img class="linea" src="../../assets/images/linea.png" />
           <p>
             {{
               "Adoramos a sus hijos, pero creemos que necesitan una noche libre."
@@ -60,13 +59,13 @@
             data-aos="zoom-in"
             data-aos-duration="3000"
             class="vestimenta-icon"
-            src="../../assets/images/codigo-hombre.png"
+            src="../../assets/images/traje.png"
           />
           <img
             data-aos="zoom-in"
             data-aos-duration="3000"
             class="vestimenta-icon"
-            src="../../assets/images/codigo-mujer.png"
+            src="../../assets/images/vestido.png"
           />
         </div>
         <div class="column vestido">
