--- a/src/app/countdown/countdown.component.html
+++ b/src/app/countdown/countdown.component.html
@@ -3,20 +3,20 @@
   <div class="wrapper">
     <div class="description">
       <div class="time-unit">
-        <p #days></p>
-        <p class="time-label">Dias</p>
+        <p class="time-number" #days></p>
+        <p class="time-label">{{ "Dias" | uppercase }}</p>
       </div>
       <div class="time-unit">
-        <p #hours></p>
-        <p class="time-label">Horas</p>
+        <p class="time-number" #hours></p>
+        <p class="time-label">{{ "Horas" | uppercase }}</p>
       </div>
       <div class="time-unit">
-        <p #minutes></p>
-        <p class="time-label">Minutos</p>
+        <p class="time-number" #minutes></p>
+        <p class="time-label">{{ "Minutos" | uppercase }}</p>
       </div>
       <div class="time-unit">
-        <p #seconds></p>
-        <p class="time-label">Segundos</p>
+        <p class="time-number" #seconds></p>
+        <p class="time-label">{{ "Segundos" | uppercase }}</p>
       </div>
     </div>
   </div>
