--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,6 +3,26 @@
 <app-navigation></app-navigation>
 
 <section class="content-container">
+  <div id="padres" class="item container padres-item">
+    <div class="section-header">
+      <h2 class="padres-mensaje">Con la bendición de nuestros padres</h2>
+    </div>
+    <div class="row">
+      <div class="column padres-nombres">
+        <p>Padres del Novia</p>
+        <h2>Silvia Patricia Pompa del Ángel</h2>
+        <h2>Jesús Cavazos de la Garza</h2>
+      </div>
+      <div class="column padres-nombres">
+        <p>Padres del Novio</p>
+        <h2>Carlota de la Rosa Falcón</h2>
+        <h2>Horacio Augusto González Rodríguez</h2>
+      </div>
+    </div>
+  </div>
+
+  <div class="parallax parallax2"></div>
+
   <div id="contador" class="item container contador-item">
     <div class="row">
       <div class="column">
@@ -33,7 +53,7 @@
               options="'Apple','Google'"
               timeZone="America/Monterrey"
               lightMode="bodyScheme"
-              styleLight="--btn-background: #b5a642;--btn-border:none;"
+              styleLight="--btn-background: #F9EDDC;--btn-border:none;"
             ></add-to-calendar-button>
           </p>
         </div>
