--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -43,25 +43,25 @@
       <span class="text">Ceremonia</span>
       <img
         class="icon"
-        src="../../assets/images/wedding-rings.png"
+        src="../../assets/images/rings.png"
         alt="Ceremonia"
       />
     </a>
     <a class="mobile-menu-link" (click)="navigateToSection('hospedaje')">
       <span class="text">Hospedaje</span>
-      <img class="icon" src="../../assets/images/hotel.png" alt="Hospedaje" />
+      <img class="icon hotel-icon" src="../../assets/images/hotel.png" alt="Hospedaje" />
     </a>
     <a class="mobile-menu-link" (click)="navigateToSection('mesaRegalo')">
       <span class="text">Mesa de Regalo</span>
       <img
-        class="icon"
+        class="icon gift-icon"
         src="../../assets/images/gift.png"
         alt="Mesa de Regalo"
       />
     </a>
     <a class="mobile-menu-link" (click)="navigateToSection('rsvp')">
       <span class="text">RSVP</span>
-      <img class="icon" src="../../assets/images/rsvp.png" alt="RSVP" />
+      <img class="icon" src="../../assets/images/rsvpIcon.png" alt="RSVP" />
     </a>
   </div>
 </nav>
