--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -70,7 +70,7 @@
 
 nav {
   width: 100%;
-  background-color: rgba(5, 10, 48);
+  background-color: #07192E;
   padding: 0px 30px 0px 30px;
   display: flex;
   justify-content: center;
@@ -86,7 +86,7 @@ nav {
   width: 100%;
   height: 40px;
   gap: 10px;
-  color: #b5a642;
+  color: #F9EDDC;
 }
 .menu-link {
   padding: 10px;
@@ -103,7 +103,7 @@ nav {
 }
 
 a {
-  color: #b5a642;
+  color: #F9EDDC;
   text-decoration: none;
 }
 a:hover {
@@ -131,12 +131,17 @@ a:hover {
 }
 
 .icon {
-  width: 45%;
+  width: 50px;
   display: none;
-  filter: saturate(500%) contrast(800%) brightness(500%) invert(80%) sepia(50%)
-    hue-rotate(120deg);
 }
-
+.hotel-icon {
+  width: 45px;
+  filter: invert(55%) sepia(73%) saturate(449%) hue-rotate(355deg) brightness(90%) contrast(92%);
+}
+.gift-icon{
+  width: 45px;
+  filter: invert(55%) sepia(73%) saturate(449%) hue-rotate(355deg) brightness(90%) contrast(92%);
+}
 .sticky{
   position: fixed;
   overflow: hidden;
