--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -9,7 +9,7 @@
     >
       <defs>
         <linearGradient id="left-to-right">
-          <stop offset="0" stop-color="#b5a642">
+          <stop offset="0" stop-color="#F9EDDC">
             <animate
               dur="2s"
               attributeName="offset"
@@ -38,7 +38,7 @@
               to="0"
             />
           </stop>
-          <stop offset="0" stop-color="#b5a642">
+          <stop offset="0" stop-color="#F9EDDC">
             <animate
               dur="2s"
               attributeName="offset"
