--- a/src/app/ceremonia/ceremonia.component.html
+++ b/src/app/ceremonia/ceremonia.component.html
@@ -56,19 +56,19 @@
       <div class="row vestimenta">
         <div class="column">
           <img
-            data-aos="zoom-in"
+            data-aos="zoom-right"
             data-aos-duration="3000"
-            class="vestimenta-icon"
+            class="vestimenta-icon vestimenta-traje"
             src="../../assets/images/traje.png"
           />
           <img
-            data-aos="zoom-in"
+            data-aos="zoom-left"
             data-aos-duration="3000"
-            class="vestimenta-icon"
+            class="vestimenta-icon vestimenta-vestido"
             src="../../assets/images/vestido.png"
           />
         </div>
-        <div class="column vestido">
+        <div class="row vestido-traje-row">
           <p>{{ "Traje o Esmoquin" | uppercase }}</p>
           <p>{{ "Vestido Largo" | uppercase }}</p>
         </div>
@@ -76,7 +76,7 @@
       <div class="row nota">
         <div class="column nota-importante">
           <h3>SÓLO ADULTOS</h3>
-          <hr />
+          <img class="linea" src="../../assets/images/linea.png" />
           <p>
             {{
               "Adoramos a sus hijos, pero creemos que necesitan una noche libre."
