--- a/src/app/hotel-card/hotel-card.component.html
+++ b/src/app/hotel-card/hotel-card.component.html
@@ -8,7 +8,7 @@
               <img
 
                 class="hotel-logo"
-                [src]="'../../assets/images/' + hotel.logo"
+                [src]="'../../assets/images/hoteles' + hotel.logo"
                 alt="Holiday Inn Express & Suites"
               />
             </div>
@@ -17,7 +17,7 @@
           <img
 
             class="hotel-img demo-bg"
-            [src]="'../../assets/images/' + hotel.imagenExterior"
+            [src]="'../../assets/images/hoteles/' + hotel.imagenExterior"
             alt="JW Marriot"
           />
         </div>
@@ -44,9 +44,8 @@
             </button>
           </div>
           <img
-
             class="hotel-img demo-bg"
-            [src]="'../../assets/images/' + hotel.imagenHabitacion"
+            [src]="'/src/assets/images/hoteles' + hotel.imagenHabitacion"
             alt="JW Marriot"
           />
         </div>
