--- a/src/app/landing/landing.component.css
+++ b/src/app/landing/landing.component.css
@@ -132,7 +132,7 @@
   left: 0;
   height: 100vh;
   pointer-events: none;
-  background-image: url("../../assets/images/VYC1.jpg ");
+  background-image: url("../../assets/images/parallax/VYC1.jpg ");
   background-repeat: no-repeat;
   background-size: cover;
   opacity: 1;
