--- a/src/app/splash/splash.component.html
+++ b/src/app/splash/splash.component.html
@@ -11,7 +11,7 @@
         <linearGradient id="left-to-right">
           <stop offset="0" stop-color="#F9EDDC">
             <animate
-              dur="2s"
+              dur="1s"
               attributeName="offset"
               fill="freeze"
               from="0"
@@ -29,9 +29,9 @@
           </stop>
         </linearGradient>
         <linearGradient id="right-to-left">
-          <stop offset="0" stop-color="#050a30">
+          <stop offset="0" stop-color="#F9EDDC">
             <animate
-              dur="2s"
+              dur="1s"
               attributeName="offset"
               fill="freeze"
               from="1"
