--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,7 +1,7 @@
 <div class="confirmar-asistencia-form">
   <div class="row">
     <div class="column icon-col">
-      <img class="icon" src="../../assets/images/rsvp.png" />
+      <img class="icon" src="../../assets/images/icons/rsvpIcon.png" />
     </div>
     <div class="column" *ngIf="invitadoConfirmado">
       <h2>¡Gracias por confirmar tu asistencia, nos vemos en la fiesta!</h2>
