--- a/src/app/timeline/timeline.component.html
+++ b/src/app/timeline/timeline.component.html
@@ -10,7 +10,7 @@
     <ng-template [ngIf]="isMobile">
       <div class="cd-timeline__block" *ngFor="let item of timeLineItems">
         <div class="cd-timeline__img cd-timeline__img--movie">
-          <img [src]="'../../assets/images/' + item.img" [alt]="item.title" />
+          <img [src]="'../../assets/images/icons/' + item.img" [alt]="item.title" />
         </div>
         <!-- cd-timeline__img -->
 
@@ -45,7 +45,7 @@
     <ng-template [ngIf]="!isMobile">
       <div class="cd-timeline__block" *ngFor="let item of timeLineItems">
         <div class="cd-timeline__img cd-timeline__img--movie">
-          <img [src]="'../../assets/images/' + item.img" [alt]="item.title" />
+          <img [src]="'../../assets/images/icons/' + item.img" [alt]="item.title" />
         </div>
         <!-- cd-timeline__img -->
 
